--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,6 +1,6 @@
 patch:
   menu:
-    page_size: 3
+    page_size: 5
   ascii_composer:
     switch_key:
       Shift_L: clear
@@ -10,9 +10,7 @@ patch:
     - schema: flypy_double
   key_binder:
     bindings:
-      - { when: has_menu, accept: semicolon,  send: 2 }
-      - { when: has_menu, accept: apostrophe, send: 3 }
-      - { when: has_menu, accept: equal, send: Page_Down }
-      - { when: has_menu, accept: minus, send: Page_Up }
+      - { when: has_menu, accept: period, send: Page_Down }
+      - { when: has_menu, accept: comma, send: Page_Up }
       - { when: always, accept: Control+t, toggle: flypy_zh_simp  }
 
