--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -1,7 +1,16 @@
 patch:
-  style:
-    color_scheme: native
-    horizontal: true
-    inline_preedit: true
-    corner_radius: 0
-    font_point: 22
+  "style/color_scheme": google_plus
+  "preset_color_schemes/google_plus":
+    name: "Google+"
+    author: "Patricivs <ipatrickmac@me.com>"
+    text_color: 0xcac9c8
+    back_color: 0xffffff
+    border_color: 0x394bdd
+    label_color: 0xcac9c8
+    hilited_text_color: 0x394bdd
+    hilited_back_color: 0xffffff
+    candidate_text_color: 0x394bdd
+    comment_text_color: 0xcac9c8
+    hilited_candidate_text_color: 0xffffff
+    hilited_comment_text_color: 0xffffff
+    hilited_candidate_back_color: 0x394bdd 
